feat: criando o dockerfile e o docker compose e ajustando as envs do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=fh-srv-status-tracker
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/db_status_tracker}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/db_status_tracker}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
