--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       ports:
          - "8080:8080"
       environment:
-         SPRING_DATASOURCE_URL: jdbc:${MYSQL_HOST}://db:${MYSQL_PORT}/${MYSQL_DATABASE}
+         SPRING_DATASOURCE_URL: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
          SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
          SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
       depends_on:
