--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,23 +6,6 @@ services:
       ports:
          - "8080:8080"
       environment:
-         SPRING_DATASOURCE_URL: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
+         SPRING_DATASOURCE_URL: ${MYSQL_URL}
          SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
          SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      depends_on:
-         - db
-
-   db:
-      image: mysql:8.0
-      environment:
-         MYSQL_DATABASE: ${MYSQL_DATABASE}
-         MYSQL_USER: ${MYSQL_USER}
-         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      ports:
-         - "3306:3306"
-      volumes:
-         - db_data:/var/lib/mysql
-
-volumes:
-   db_data:
